--- a/src/index.html
+++ b/src/index.html
@@ -1,6 +1,13 @@
 <!DOCTYPE html>
 <html lang = "en">
   <head>
+      <script>
+          window._trackJs = {
+              token: "ee496cb34a5a4766bccc2318c9462747"
+          };
+      </script>
+      <script src="https://cdn.trackjs.com/releases/current/tracker.js">
+      </script>
     <mata charset="UTF-8">
   </head>
   <body>
